Prevent theme color selection from overflowing

--- a/src/app/settings-dialog/settings-dialog.component.scss
+++ b/src/app/settings-dialog/settings-dialog.component.scss
@@ -53,33 +53,10 @@
 
   &.active {
     border-color: #4baae0;
-
-    & + .button-styling {
-      border-left-color: #4baae0;
-    }
   }
 
   &:hover {
     border-color: #222222;
-  }
-
-  &:hover + .button-styling,
-  &.active + .button-styling:hover {
-    border-left-color: #222222;
-  }
-
-  &:nth-last-child(n + 2) {
-    border-right: 0;
-  }
-
-  &:first-child {
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-  }
-
-  &:last-child {
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
   }
 }
 
@@ -92,6 +69,7 @@
 
 .button-row {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .label-button {
